# word-counter

./: CMakeLists.txt  database.h  history.db  mainwindow.cpp  mainwindow.h  wordcountdto.h  wordcounthistory.h  wordcountservice.cpp  wordcountservice.h
tests/: test_wordcountservice.cpp
